This is the first commit after building the new file structure on top of my old development tree (compile successfully).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -514,7 +514,8 @@ set(DOMAIN_SIAL_FILES
     aces/src/sialx/scf/scf_uhf_defs.sialx;
     aces/src/sialx/scf/scf_rhf.sialx;
     aces/src/sialx/scf/scf_rhf_defs.sialx;
-    aces/src/sialx/cc/mp2_rhf_disc.sialx;
+    aces/src/sialx/scf/diis_4index_rhf.sialx;
+    aces/src/sialx/scf/diis_4index_uhf.sialx;
     aces/src/sialx/cc/rccsd_rhf.sialx;
     aces/src/sialx/cc/rlambda_rhf.sialx;
     aces/src/sialx/cc/rlccd_rhf.sialx;
@@ -525,6 +526,14 @@ set(DOMAIN_SIAL_FILES
     aces/src/sialx/cc/rlamccsdpt_aaa.sialx;
     aces/src/sialx/cc/rlamccsdpt_aab.sialx;
     aces/src/sialx/cc/rccpt1p2_prop.sialx;
+    aces/src/sialx/cc/ccsd_uhf_defs.sialx;
+    aces/src/sialx/cc/ccsd_uhf.sialx;
+    aces/src/sialx/cc/ccsd_uhf_vars.sialx;
+    aces/src/sialx/cc/diis_4index_ccsd_uhf.sialx;
+    aces/src/sialx/cc/diis_4index_lambda_uhf.sialx;
+    aces/src/sialx/cc/lambda_uhf_defs.sialx;
+    aces/src/sialx/cc/lambda_uhf.sialx;
+    aces/src/sialx/cc/lambda_uhf_vars.sialx;
     aces/src/sialx/eom/eom_rhf_defs.sialx
     aces/src/sialx/eom/eom_rhf_hbar.sialx;
     aces/src/sialx/eom/eom_rhf_tran.sialx;
@@ -554,191 +563,35 @@ set(DOMAIN_SIAL_FILES
     aces/src/sialx/fef-cc/mcpt2_defs.sialx;
     aces/src/sialx/fef-cc/mcpt2_singles.sialx;
     aces/src/sialx/fef-cc/mcpt2_doubles.sialx;
-    aces/src/sialx/fef-cc/mcpt2_util.sialx)
+    aces/src/sialx/fef-cc/mcpt2_util.sialx;
+    aces/src/sialx/mbpt/mp2_rhf_disc.sialx;
+    aces/src/sialx/mbpt/mp2_uhf_defs.sialx;
+    aces/src/sialx/mbpt/mp2_uhf.sialx;
+    aces/src/sialx/scf_deriv/scf_grad_ru_hf_defs.sialx;
+    aces/src/sialx/scf_deriv/scf_grad_ru_hf.sialx;
+    aces/src/sialx/mbpt_deriv/mp2grad_rhf_defs.sialx;
+    aces/src/sialx/mbpt_deriv/mp2grad_rhf.sialx;
+    aces/src/sialx/mbpt_deriv/mp2grad_rhf_vars.sialx;
+    aces/src/sialx/mbpt_deriv/mp2grad_uhf_defs.sialx;
+    aces/src/sialx/mbpt_deriv/mp2grad_uhf.sialx;
+    aces/src/sialx/mbpt_deriv/mp2grad_uhf_vars.sialx;
+    aces/src/sialx/cc_deriv/ccsd_1grad_rhf.sialx;
+    aces/src/sialx/cc_deriv/ccsd_1grad_rhf_vars.sialx;
+    aces/src/sialx/cc_deriv/ccsd_1grad_uhf.sialx;
+    aces/src/sialx/cc_deriv/ccsd_1grad_uhf_vars.sialx;
+    aces/src/sialx/cc_deriv/ccsd_2grad_rhf.sialx;
+    aces/src/sialx/cc_deriv/ccsd_2grad_rhf_vars.sialx;
+    aces/src/sialx/cc_deriv/ccsd_2grad_uhf.sialx;
+    aces/src/sialx/cc_deriv/ccsd_2grad_uhf_vars.sialx;
+    aces/src/sialx/cc_deriv/ccsdgrad_rhf_defs.sialx;
+    aces/src/sialx/cc_deriv/ccsdgrad_uhf_defs.sialx;
+    aces/src/sialx/cc_deriv/diis_2index_ccgrad_rhf.sialx;
+    aces/src/sialx/cc_deriv/diis_2index_ccgrad_uhf.sialx)
 
-# add aces sial files here
-set(SIAL_FILES
-# <<<<<<< HEAD
-#     src/sialx/test/empty.sialx;
-#     src/sialx/test/static_array_test.sialx;
-#     src/sialx/test/ifelse.sialx;
-#     src/sialx/test/put_test.sialx;
-#     src/sialx/test/index_decs.sialx;
-#     src/sialx/test/predef_scalars.sialx;
-#     src/sialx/test/print_block_test.sialx;
-#     src/sialx/test/tmp_arrays.sialx;
-#     src/sialx/test/scalars.sialx;
-#     src/sialx/test/insert_slice_test.sialx;
-#     src/sialx/test/print_scalar.sialx;
-#     src/sialx/test/where_clause.sialx;
-#     src/sialx/test/loop_over_simple_indices.sialx;
-#     src/sialx/test/exit_statement_test.sialx;
-#     src/sialx/test/no_arg_user_sub.sialx;
-#     src/sialx/test/helloworld.sialx;
-#     src/sialx/test/pardo_loop.sialx;
-#     src/sialx/test/pardo_loop_with_pragma.sialx;
-#     src/sialx/test/subindex_test.sialx;
-#     src/sialx/test/local_arrays.sialx;
-#     src/sialx/test/scalarTable.sialx;
-#     src/sialx/test/stringLiterals.sialx;
-#     src/sialx/test/aces_defs.sialx;
-#     src/sialx/test/fill_sequential_test.sialx;
-#     src/sialx/test/local_arrays_wild.sialx;
-#     src/sialx/test/local_arrays_wild_fail.sialx;
-#     src/sialx/test/basic_assign_to_static_array_test.sialx;
-#     src/sialx/test/contiguous_local.sialx;
-#     src/sialx/test/contiguous_local_2.sialx;
-#     src/sialx/test/contiguous_local_allocate_twice_fail.sialx;
-#     src/sialx/test/block_scale_assign.sialx;
-#     src/sialx/test/return_sval_test.sialx;
-#     src/sialx/test/broadcast_static.sialx;
-#     src/sialx/test/sum_op_test.sialx;
-#     src/sialx/test/transpose_tmp.sialx;
-#     src/sialx/test/transpose4d_tmp.sialx;
-#     src/sialx/test/transpose4d_square_tmp.sialx;
-#     src/sialx/test/tmp_arrays_2.sialx;
-#     src/sialx/test/contraction_small_test.sialx;
-#     src/sialx/test/contraction_small_test2.sialx;
-#     src/sialx/test/get_int_array_test.sialx;
-#     src/sialx/test/get_scalar_array_test.sialx;
-#     src/sialx/test/get_scratch_array_test.sialx;
-#     src/sialx/test/gpu_contraction_small_test.sialx;
-#     src/sialx/test/gpu_ops.sialx;
-#     src/sialx/test/contract_to_scalar.sialx;
-#     src/sialx/test/gpu_sum_op_test.sialx;
-#     src/sialx/test/gpu_contract_to_scalar.sialx;
-#     src/sialx/test/gpu_transpose_tmp.sialx;
-#     src/sialx/test/self_multiply_test.sialx;
-#     src/sialx/test/gpu_self_multiply_test.sialx;
-#     src/sialx/test/simple_indices_assignments.sialx;
-#     src/sialx/test/add_and_subtract_scalars.sialx;
-#     src/sialx/test/gpu_contraction_predefined_test.sialx;
-#     src/sialx/test/assign_to_static_array_test.sialx;
-#     src/sialx/test/set_persistent_test.sialx;
-#     src/sialx/test/restore_persistent_test.sialx;
-#     src/sialx/test/persistent_static_array_test1.sialx;
-#     src/sialx/test/persistent_static_array_test2.sialx;
-#     src/sialx/test/persistent_distributed_array_test1.sialx;
-#     src/sialx/test/persistent_distributed_array_test2.sialx;
-#     src/sialx/test/put_test_mpi.sialx;
-#     src/sialx/test/put_initialize.sialx;
-#     src/sialx/test/put_increment.sialx;
-#     src/sialx/test/put_accumulate_mpi.sialx;
-#     src/sialx/test/delete_mpi.sialx;
-#     src/sialx/test/get_mpi.sialx;
-#     src/sialx/test/persistent_distributed_array_mpi1.sialx;
-#     src/sialx/test/persistent_distributed_array_mpi2.sialx;
-#     src/sialx/test/persistent_empty_mpi1.sialx;
-#     src/sialx/test/persistent_empty_mpi2.sialx;
-#     src/sialx/test/persistent_scalars_1.sialx;
-#     src/sialx/test/persistent_scalars_2.sialx;
-#     src/sialx/test/unmatched_get.sialx;
-#     src/sialx/test/all_rank_print_test.sialx;
-#     src/sialx/test/message_number_wraparound_test.sialx;
-#     src/sialx/test/pardo_loop_1d.sialx;
-#     src/sialx/test/pardo_loop_2d.sialx;
-#     src/sialx/test/pardo_loop_3d.sialx;
-#     src/sialx/test/pardo_loop_4d.sialx;
-#     src/sialx/test/pardo_loop_5d.sialx;
-#     src/sialx/test/pardo_loop_6d.sialx;
-#     src/sialx/test/scalar_ops.sialx;
-#     src/sialx/test/int_ops.sialx;
-#     src/sialx/test/int_self_ops.sialx;
-#     src/sialx/test/scalar_valued_blocks.sialx;
-#     src/sialx/test/broadcast_static.sialx;
-#     src/sialx/test/block_scale_assign.sialx;
-#     src/sialx/test/return_sval_test.sialx;
-#     src/sialx/test/index_scalar_cast.sialx;
-#     src/sialx/test/contig_local3.sialx;
-#     src/sialx/test/cached_block_map_test.sialx;
-#     src/sialx/test/cached_block_map_test_no_dangling_get.sialx;
-#     src/sialx/test/pardo_with_where.sialx;
-#     src/sialx/test/pardo_load_balance_test.sialx;
-#     src/sialx/test/read_block_test.sialx;
-#     src/sialx/test/cast_indices_to_simple.sialx;
-#     src/sialx/test/aoladder.sialx;
-#     src/sialx/test/test_ecpint.sialx;
-#     src/sialx/test/test_derint.sialx;
-#     src/sialx/test/test_hessints.sialx;
-#     src/sialx/test/put_accumulate_stress.sialx;
-#     src/sialx/test/disk_backing_test.sialx;
-#     src/sialx/test/disk_backing_put_acc_stress.sialx;
-#     src/sialx/qm/scf_rhf_coreh.sialx;
-#     src/sialx/qm/scf_defs.sialx;
-#     src/sialx/qm/scf_frag_lowmem.sialx;
-#     src/sialx/qm/drop_core_in_sial.sialx;
-#     src/sialx/qm/mcpt2_corr_lowmem.sialx;
-#     src/sialx/qm/tran_frag.sialx;
-#     src/sialx/qm/mcpt2_vars.sialx;
-#     src/sialx/qm/mcpt2_defs.sialx;
-#     src/sialx/qm/mcpt2_singles.sialx;
-#     src/sialx/qm/mcpt2_doubles.sialx;
-#     src/sialx/qm/mcpt2_util.sialx;
-#     src/sialx/qm/mp2_rhf_disc.sialx;
-#     src/sialx/qm/tran_rhf_no4v.sialx;
-#     src/sialx/qm/tran_uhf_no4v.sialx;
-#     src/sialx/qm/tran_rhf_no4v_defs.sialx;
-#     src/sialx/qm/tran_rhf_no3v.sialx;
-#     src/sialx/qm/tran_eom.sialx;
-#     src/sialx/qm/rccsd_rhf.sialx;
-#     src/sialx/qm/rlambda_rhf.sialx;
-#     src/sialx/qm/rlccd_rhf.sialx;
-#     src/sialx/qm/rlccsd_rhf.sialx;
-#     src/sialx/qm/rccsdpt_aaa.sialx;
-#     src/sialx/qm/rccsdpt_aab.sialx;
-#     src/sialx/qm/rlamccsdpt_aaa.sialx;
-#     src/sialx/qm/rlamccsdpt_aab.sialx;
-#     src/sialx/qm/rccpt1p2_prop.sialx;
-#     src/sialx/qm/rcis_rhf.sialx;
-#     src/sialx/qm/rcis_d_rhf.sialx;
-#     src/sialx/qm/rcis_ccpt2_rhf.sialx;
-#     src/sialx/qm/lr_eom_ccsd_rhf.sialx;
-#     src/sialx/qm/lr_eom_linccsd_rhf.sialx;
-#     src/sialx/qm/reom_rhf_defs.sialx;
-#     src/sialx/qm/rccsd_rhf_defs.sialx;
-#     src/sialx/qm/scf_uhf.sialx;
-    src/sialx/qm/scf_uhf_defs.sialx;
-    src/sialx/qm/scf_rhf.sialx;
-    src/sialx/qm/scf_rhf_defs.sialx;
-    src/sialx/qm/scf_grad_ru_hf.sialx;
-    src/sialx/qm/scf_grad_ru_hf_defs.sialx;
-    src/sialx/qm/mp2_uhf.sialx;
-    src/sialx/qm/mp2_uhf_defs.sialx;
-    src/sialx/qm/diis_2index_rhf.sialx;
-    src/sialx/qm/diis_2index_uhf.sialx;
-    src/sialx/qm/diis_4index_rhf.sialx;
-    src/sialx/qm/diis_4index_uhf.sialx;
-    src/sialx/qm/mp2grad_rhf_vars.sialx;
-    src/sialx/qm/mp2grad_rhf_defs.sialx;
-    src/sialx/qm/diis_2index_mp2grad_rhf.sialx;
-    src/sialx/qm/mp2grad_rhf.sialx;
-    src/sialx/qm/mp2grad_uhf.sialx;
-    src/sialx/qm/ccsd_uhf_defs.sialx;
-    src/sialx/qm/ccsd_uhf_vars.sialx;
-    src/sialx/qm/diis_4index_ccsd_uhf.sialx;
-    src/sialx/qm/ccsd_uhf.sialx;
-    src/sialx/qm/lambda_uhf_defs.sialx;
-    src/sialx/qm/lambda_uhf_vars.sialx;
-    src/sialx/qm/diis_4index_lambda_uhf.sialx;
-    src/sialx/qm/lambda_uhf.sialx;
-    src/sialx/qm/ccsdgrad_rhf_defs.sialx;
-    src/sialx/qm/ccsd_1grad_rhf_vars.sialx;
-    src/sialx/qm/diis_2index_ccgrad_rhf.sialx;
-    src/sialx/qm/ccsd_1grad_rhf.sialx;
-    src/sialx/qm/ccsd_2grad_rhf_vars.sialx;
-    src/sialx/qm/ccsd_2grad_rhf.sialx;
-    src/sialx/qm/ccsdgrad_uhf_defs.sialx;
-    src/sialx/qm/ccsd_1grad_uhf_vars.sialx;
-    src/sialx/qm/diis_2index_ccgrad_uhf.sialx;
-    src/sialx/qm/ccsd_1grad_uhf.sialx;
-    src/sialx/qm/ccsd_2grad_uhf_vars.sialx;
-    src/sialx/qm/ccsd_2grad_uhf.sialx)
+#    aces/src/sialx/scf_deriv/scf_hess_uhf_defs.sialx;
+#    aces/src/sialx/scf_deriv/scf_hess_uhf.sialx)
 
-#    src/sialx/qm/scf_hess_uhf.sialx;
-#    src/sialx/qm/scf_hess_uhf_defs.sialx)
-
-set(SIAL_COMPILER_JAR ${CMAKE_SOURCE_DIR}/compiler/SialCompiler.jar)
-    ${DOMAIN_SIAL_FILES}
+set(DOMAIN_SIAL_FILES
     sia/src/sialx/test/empty.sialx;
     sia/src/sialx/test/static_array_test.sialx;
     sia/src/sialx/test/ifelse.sialx;
