--- a/aces/src/super_instructions/CMakeLists.txt
+++ b/aces/src/super_instructions/CMakeLists.txt
@@ -21,6 +21,8 @@ set(QM_SOURCE_FILES
     qm-generic/energy_ty_denominator_rhf.F;
     qm-generic/energy_denominator_rhf.F;
     qm-generic/energy_numerator_rhf.F;
+    qm-generic/energy_denominator.F;
+    qm-generic/energy_udenominator.F;
     utility/form_diagonal_unit_matrix.F;
     utility/return_diagonal.F;
     utility/print_block_and_index.F;
@@ -39,6 +41,7 @@ set(QM_SOURCE_FILES
     utility/compute_diis.F;
     utility/return_sval.F;
     utility/remove_diagonal_elements.F;
+    utility/cwork0222.F;
     mcpt-fragment/set_frag.F;
     mcpt-fragment/scf_atom_lowmem.F;
     mcpt-fragment/compute_int_scratchmem_lowmem.F;
@@ -83,8 +86,20 @@ set(QM_SOURCE_FILES
     direct_integral/compute_uintegrals8.F;
     direct_integral/return_1el_ecp_ints.F;
     direct_integral/compute_return_1el_ecp_ints.F;
-    direct_integral/return_1el_ecp_grdints.F;
-    direct_integral/compute_return_1el_ecp_grdints.F;
+    direct_integral/return_1el_grdints.F;
+    direct_integral/compute_return_1el_grdints.F;
+    direct_integral/return_1el_gradient.F;
+    direct_integral/compute_return_1el_gradient.F;
+    direct_integral/return_2el_grdints.F;
+    direct_integral/compute_return_2el_grdints.F;
+    direct_integral/return_kin_ovl_hessints.F;
+    direct_integral/compute_return_kin_ovl_hessints.F;
+    direct_integral/return_nai_hessints.F;
+    direct_integral/compute_return_nai_hessints.F;
+    direct_integral/compute_return_2el_hessian.F;
+    direct_integral/return_2el_hessian.F;
+    direct_integral/return_2el_gradient.F;
+    direct_integral/compute_nn_repulsion_grad.F;
     erd/erd__ctr_tu_expand.f;
     erd/erd__ctr_4index_reorder.f;
     erd/erd__spherical_transform.f;
