This commit should be viewed as the first official commit since 2015 December. There are several things. The CC, Lambbda, gradient codes (UHF,RHF) have been checked again and some critical issues have been fixed (unfortuantely most of them have something to do with conflicting account I heard about zeroing arrays; see item 1 below). The timing runs have been done all the way through lambda and the baseline timing show expected performance.
There is a new sialx code (hfstability_uhf.sial; both RHF and UHF instabilities
can be found). This is the starting point of many new sialx code to
come in the near future. There are few new special super instructions to go
allong.

Comments to Beverly:
1. Pls. initilize the distributed arrays to zero. This will eliminate needless
   zeroing out distributed arrays silx codes before the first put accumulate
   (of course there are cases that this is necessary; ie. loops). (simple put
   complains about barriers)

2. While testing hfstability code, I have obsereved that it deviates from
   2 processor jobs (or identical ACES III jobs) when on more than 2
   cores. I have done all I can to find out whether this has something
   to do with the usual suspect (missing barriers etc...)
   So, Beverly need to have a carefull check since so much of what comes
   next (IP, EA, EE codes) depend on having this work correctly.

3. I have seen similar issuse as above with the gradients codes when I try to
   run large gradient calcs. to establish baseline timing. I am trying
   to confirm that this is ndeed the case.

4. To have a collective operation on a static array would be usefull.
   As we have discussed, currently I use distributed to avoid having
   to do a collective (use put accumulate to do the task). It may be
   effecient to use static opposed to distributed for these small
   arrays (at most 100*100) and use do instead of pardo.

5. Improvments to printing. As we have discussed if we can do formatted
   printing, then we can avoid

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -516,6 +516,8 @@ set(DOMAIN_SIAL_FILES
     aces/src/sialx/scf/scf_rhf_defs.sialx;
     aces/src/sialx/scf/diis_4index_rhf.sialx;
     aces/src/sialx/scf/diis_4index_uhf.sialx;
+    aces/src/sialx/scf/hfstability_uhf_defs.sialx;
+    aces/src/sialx/scf/hfstability_uhf.sialx;
     aces/src/sialx/cc/rccsd_rhf.sialx;
     aces/src/sialx/cc/rlambda_rhf.sialx;
     aces/src/sialx/cc/rlccd_rhf.sialx;
